After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729737 - Inconsistent thread default main context pushing/popping
Inconsistent thread default main context pushing/popping
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2014-05-07 17:35 UTC by Sebastian Dröge (slomo)
Modified: 2014-05-07 19:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-Pop-the-thread-default-main-context-not-from-the-cal.patch (3.06 KB, patch)
2014-05-07 17:35 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2014-05-07 17:35:55 UTC
Created attachment 276091 [details] [review]
0001-Pop-the-thread-default-main-context-not-from-the-cal.patch

This is a follow-up to http://mail.gnome.org/archives/libsoup-list/2011-November/msg00000.html , which apparently was not fixed yet even in latest GIT and there are also some other occurences of this.
Comment 1 Dan Winship 2014-05-07 18:06:00 UTC
Comment on attachment 276091 [details] [review]
0001-Pop-the-thread-default-main-context-not-from-the-cal.patch

(assuming "make check" still passes)
Comment 2 Sebastian Dröge (slomo) 2014-05-07 19:19:41 UTC
Thanks, pushed :)