Pop the thread default main context not from the callback but from where it was pushed

Based on a patch by Dmitry Shatrov <shatrov@gmail.com>, see
http://mail.gnome.org/archives/libsoup-list/2011-November/msg00000.html

https://bugzilla.gnome.org/show_bug.cgi?id=729737